--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "laravel/framework": "^7.0",
         "laravel/tinker": "^2.0",
         "laravel/ui": "^2.0",
+        "snapappointments/bootstrap-select": "^1.13",
         "twbs/bootstrap": "4.4.1"
     },
     "require-dev": {
