--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "laravel/ui": "^2.0",
         "pusher/pusher-php-server": "~4.0",
         "snapappointments/bootstrap-select": "^1.13",
+        "stripe/stripe-php": "^7.31",
         "twbs/bootstrap": "4.4.1"
     },
     "require-dev": {
